Added a Question page

--- a/src/components/HomePage/HomePage-style.css
+++ b/src/components/HomePage/HomePage-style.css
@@ -15,3 +15,8 @@
     /* margin-bottom: 200px; */
     font-size: 50px !important;
 }
+
+.introSegment{
+    margin-top: 50px !important;
+    margin-bottom: 50px !important;
+}
