--- a/src/components/HomePage/HomePage-style.css
+++ b/src/components/HomePage/HomePage-style.css
@@ -3,8 +3,11 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    height: 500px;
+    height: 600px;
     width: 100%;
+    position: relative;
+    text-align: center;
+    z-index: 1;
 }
 
 .topMenu{
@@ -14,9 +17,26 @@
 .title{
     /* margin-bottom: 200px; */
     font-size: 50px !important;
+    z-index: 1 !important;
+    text-shadow: -1px 0 #2c3e50, 0 1px #2c3e50, 1px 0 #2c3e50, 0 -1px #2c3e50;
 }
 
 .introSegment{
     margin-top: 50px !important;
     margin-bottom: 50px !important;
+}
+
+.mongo_background{
+    z-index: -1 !important;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(
+        to right,
+        rgb(126,213,111,.5),
+        rgb(40,180,133, .5)
+    ),
+    url(https://cdn.hipwallpaper.com/i/59/10/TbhF6i.jpg);
+
+    background-size: cover;
 }
