--- a/src/components/Questions/Questions-style.css
+++ b/src/components/Questions/Questions-style.css
@@ -1,5 +1,5 @@
 .list{
-    margin-top: 10px;
+    margin-top: 10px !important;
 }
 
 .header{
@@ -27,3 +27,37 @@
     border-radius: 0px 0px 10px 10px;
     padding: 15px;
 }
+
+.container{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 500px;
+    width: 100%;
+    position: relative;
+    text-align: center;
+    text-align: center;
+    z-index: 1;
+}
+
+.title{
+    
+    z-index: 1 !important;
+}
+
+.mongoDb{
+    z-index: -1 !important;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(
+        to right,
+        rgb(126,213,111,.5),
+        rgb(40,180,133, .5)
+    ),
+    url("https://cdn.hipwallpaper.com/i/59/10/TbhF6i.jpg");
+
+    background-size: cover;
+}
+
