--- a/src/components/Questions/Questions-style.css
+++ b/src/components/Questions/Questions-style.css
@@ -29,17 +29,18 @@
 }
 
 .container{
+    
     display:flex;
-   
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    height: 500px;
+    height: 100%;
     width: 100%;
     position: relative;
     text-align: center;
     text-align: center;
-    z-index: 1;
+    z-index: 1 !important;
+    
 }
 
 .title{
@@ -69,4 +70,57 @@
 .letter_container{
     display: inline-block !important;
     text-align: center !important;
+}
+
+.training_color_open{
+    background-color: #85dcba;
+}
+.training_color_closed{
+    background-color: #41B3A3;
+}
+
+.questionPage_background{
+    position: absolute;
+    background-image: linear-gradient(
+        to right,
+        rgb(126,213,111,.5),
+        rgb(40,180,133, .5)
+    ),
+    url(https://cdn.hipwallpaper.com/i/59/10/TbhF6i.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height:1000px;
+    z-index:-1 !important;
+}
+
+.question-border{
+    height:auto;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    width: 100%; 
+    padding-right:50px !important;
+    padding-left: 50px !important;
+    right:90%;
+    background-image: linear-gradient(
+        to right,
+        rgb(126,213,111,.5),
+        rgb(40,180,133, .5)
+    );
+
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+.password-container{
+    margin-top:20px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.card-container{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
