--- a/src/components/HomePage/HomePage-style.css
+++ b/src/components/HomePage/HomePage-style.css
@@ -28,7 +28,7 @@ html {
     /* margin-bottom: 200px; */
     font-size: 50px !important;
     z-index: 1 !important;
-    text-shadow: -1px 0 #2c3e50, 0 1px #2c3e50, 1px 0 #2c3e50, 0 -1px #2c3e50;
+    /* text-shadow: -1px 0 #2c3e50, 0 1px #2c3e50, 1px 0 #2c3e50, 0 -1px #2c3e50; */
 }
 
 .introSegment{
@@ -67,7 +67,8 @@ html {
     right:0;
 }
 
+/*Not needed right now 
 .app_container{
   
     
-}
+} */
