--- a/src/components/css/QuestionPage-style.css
+++ b/src/components/css/QuestionPage-style.css
@@ -52,7 +52,21 @@
     padding: 15px;
 }
 
+.input{
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    width: 100%;
+    margin:0 auto;
+}
+
 .question-bar_container{
+    width: 70%;
+    margin:0 auto;
+}
+
+.question-bar_container_true{
+    background-color: lawngreen;
     width: 70%;
     margin:0 auto;
 }
