--- a/src/components/css/QuestionPage-style.css
+++ b/src/components/css/QuestionPage-style.css
@@ -53,6 +53,7 @@
     border-top: none;
     border-radius: 0px 0px 10px 10px;
     padding: 15px;
+    color:  #DEF2F1;
 }
 
 .collapsible_bar_content_false{
