--- a/src/components/css/QuestionPage-style.css
+++ b/src/components/css/QuestionPage-style.css
@@ -113,3 +113,9 @@
 .noMargin{
     margin: 0;
 }
+
+.question_content{
+    display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
