Added questions to round 4

--- a/src/components/css/Grid-style.css
+++ b/src/components/css/Grid-style.css
@@ -79,7 +79,7 @@
 .grid-container_password-training{
     width: 40%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     margin: 0 auto;
  
 }
