--- a/src/components/css/QuestionPage-style.css
+++ b/src/components/css/QuestionPage-style.css
@@ -1,8 +1,9 @@
 .title-container{
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    align-items: flex-end;
+    /* align-items: center;
+    flex-direction: column; */
     width: 100%;
     height: auto;
 }
